White space Registration Fix

--- a/public/styles/login_style.css
+++ b/public/styles/login_style.css
@@ -7,13 +7,9 @@
 
 body {
     overflow: hidden;
-    background: #f6faff;
-
-    section.Main-content{
-      margin: 0px;
-      padding: 0px;
-      background: #f6faff;
-    }
+    background-color: #f6faff;
+    margin: 0px;
+    padding: 0px;
 }
 
 #resetBtn{
@@ -148,6 +144,15 @@ input.invalid {
 
 /* REGISTRATION PAGE BEGINS HERE */
 
+#registrationLogo{
+  width: 100px;
+  height: 100px;
+  top: 20px;
+  left: 20px;
+  object-fit:contain;
+  position: absolute;
+}
+
 .gradientLiner{
   height: 20px;
   width: 100vw;
@@ -241,14 +246,18 @@ input[type="checkbox"]:checked + label{
   letter-spacing: 1.7px;
   color: #454545;
   text-align: center;
-  margin-bottom: 6%;
+  margin-bottom: 6vh;
+  margin-left: auto;
+  margin-right: auto;
+  width: 680px;
 }
 
 .nextButton{
-  margin-left: 175px;
-  margin-right: 175px;
+  display:block;
+  margin-left: auto;
+  margin-right: auto;
   font-size: 18px;
-  margin-top: 8%;
+  margin-top: 8vh;
   margin-bottom: 1%;
   background: -webkit-linear-gradient(360deg, #0084ff, #00c6ff);
   text-transform: uppercase;
@@ -262,11 +271,10 @@ input[type="checkbox"]:checked + label{
 }
 
 .tab{
-  width: 700px;
-  margin-left: auto;
+  width: 100%;
   margin-right: auto;
-  margin-bottom: auto;
-  height: auto;
+  margin-left: auto;
+  height: 100%;
 }
 
 .inputRow{
